--- a/index.html
+++ b/index.html
@@ -4,10 +4,47 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Leanna Szypowski - Portfolio</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <nav>
+        <li class="nav-link"><a href="">Home</a></li>
+        <li class="nav-link"><a href="">About</a></li>
+        <li class="nav-link"><a href="">Projects</a></li>
+      </nav>
+    </header>
+
+    <main>
+      <section class="introduction-information">
+        <h1>Hi, I'm Leanna Szypowski</h1>
+        <p>
+          I am a grade 11 student enrolled in Pembina Trails Early College (PTEC). I am currently in the software development course at MITT
+        </p>
+      </section>
+      <section class="card-container">
+        <div class="card"><img src="" alt="" /></div>
+        <div class="card"><img src="" alt="" /></div>
+        <div class="card"><img src="" alt="" /></div>
+        <div class="card"><img src="" alt="" /></div>
+      </section>
+    </main>
+
+    <footer>
+      <nav>
+        <li class="nav-link"><a href="">Home</a></li>
+        <li class="nav-link"><a href="">About</a></li>
+        <li class="nav-link"><a href="">Projects</a></li>
+      </nav>
+      <div class="contact-information">
+        <h4>Contact Information</h4>
+        <p>leannaszypowski@gmail.com</p>
+        <p>(431)-337-3339</p>
+        <p>https://github.com/Leanna-S</p>
+      </div>
+    </footer>
+
     <script src="app.js"></script>
   </body>
 </html>
