--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
   <body>
     <header>
       <nav>
-        <li class="nav-link"><a href="">Home</a></li>
-        <li class="nav-link"><a href="">About</a></li>
-        <li class="nav-link"><a href="">Projects</a></li>
+        <ul>
+          <li class="nav-link"><a href="">Home</a></li>
+          <li class="nav-link"><a href="">About</a></li>
+          <li class="nav-link"><a href="">Projects</a></li>
+        </ul>
       </nav>
     </header>
 
@@ -24,18 +26,20 @@
         </p>
       </section>
       <section class="card-container">
-        <div class="card"><img src="" alt="" /></div>
-        <div class="card"><img src="" alt="" /></div>
-        <div class="card"><img src="" alt="" /></div>
-        <div class="card"><img src="" alt="" /></div>
+        <div class="card"><img src="http://placekitten.com/200/300" alt="" /></div>
+        <div class="card"><img src="http://placekitten.com/200/300" alt="" /></div>
+        <div class="card"><img src="http://placekitten.com/200/300" alt="" /></div>
+        <div class="card"><img src="http://placekitten.com/200/300" alt="" /></div>
       </section>
     </main>
 
     <footer>
       <nav>
-        <li class="nav-link"><a href="">Home</a></li>
-        <li class="nav-link"><a href="">About</a></li>
-        <li class="nav-link"><a href="">Projects</a></li>
+        <ul>
+          <li class="nav-link"><a href="">Home</a></li>
+          <li class="nav-link"><a href="">About</a></li>
+          <li class="nav-link"><a href="">Projects</a></li>
+        </ul>
       </nav>
       <div class="contact-information">
         <h4>Contact Information</h4>
