Implement card spread

--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
           I am a grade 11 student enrolled in Pembina Trails Early College (PTEC). I am currently in the software development course at MITT
         </p>
       </section>
-      <section class="card-container">
-        <div class="card"><img src="http://placekitten.com/200/300" alt="" /></div>
-        <div class="card"><img src="http://placekitten.com/200/300" alt="" /></div>
-        <div class="card"><img src="http://placekitten.com/200/300" alt="" /></div>
-        <div class="card"><img src="http://placekitten.com/200/300" alt="" /></div>
+      <section class="card-section">
+        <h2>Checkout My Art</h2>
+        <div class="card-container">
+          <div class="card"><img src="images/IMG_1111.PNG" alt="" /></div>
+          <div class="card"><img src="images/IMG_1112.PNG" alt="" /></div>
+          <div class="card"><img src="images/IMG_1113.PNG" alt="" /></div>
+          <div class="card"><img src="images/IMG_1114.PNG" alt="" /></div>
+        </div>
       </section>
     </main>
 
