Organize CSS and add to projects

--- a/projects.html
+++ b/projects.html
@@ -5,16 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leanna Szypowski - Projects</title>
+    <link rel="stylesheet" href="stylesheets/general-styling.css" />
+    <link rel="stylesheet" href="stylesheets/projects-styling.css" />
   </head>
   <body>
-    <section class="card-section">
-      <h2>Checkout My Art</h2>
-      <div class="card-container">
-        <div class="card"><img src="images/IMG_1111.PNG" alt="" /></div>
-        <div class="card"><img src="images/IMG_1112.PNG" alt="" /></div>
-        <div class="card"><img src="images/IMG_1113.PNG" alt="" /></div>
-        <div class="card"><img src="images/IMG_1114.PNG" alt="" /></div>
+    <header>
+      <nav>
+        <ul>
+          <li class="nav-link"><a href="index.html">Home</a></li>
+          <li class="nav-link"><a href="">About</a></li>
+          <li class="nav-link"><a href="projects.html">Projects</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="card-section">
+        <h2>Checkout My Art</h2>
+        <div class="card-container">
+          <div class="card"><img src="images/IMG_1111.PNG" alt="" /></div>
+          <div class="card"><img src="images/IMG_1112.PNG" alt="" /></div>
+          <div class="card"><img src="images/IMG_1113.PNG" alt="" /></div>
+          <div class="card"><img src="images/IMG_1114.PNG" alt="" /></div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <nav>
+        <ul>
+          <li class="nav-link"><a href="index.html">Home</a></li>
+          <li class="nav-link"><a href="">About</a></li>
+          <li class="nav-link"><a href="projects.html">Projects</a></li>
+        </ul>
+      </nav>
+      <div class="contact-information">
+        <h4>Contact Information</h4>
+        <p>leannaszypowski@gmail.com</p>
+        <p>(431)-337-3339</p>
+        <p>https://github.com/Leanna-S</p>
       </div>
-    </section>
+    </footer>
+
+    <script src="app.js"></script>
   </body>
 </html>
