--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leanna Szypowski - Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="stylesheets/general-styling.css" />
+    <link rel="stylesheet" href="stylesheets/home-styling.css" />
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li class="nav-link"><a href="">Home</a></li>
+          <li class="nav-link"><a href="index.html">Home</a></li>
           <li class="nav-link"><a href="">About</a></li>
-          <li class="nav-link"><a href="">Projects</a></li>
+          <li class="nav-link"><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
     </header>
@@ -30,9 +31,9 @@
     <footer>
       <nav>
         <ul>
-          <li class="nav-link"><a href="">Home</a></li>
+          <li class="nav-link"><a href="index.html">Home</a></li>
           <li class="nav-link"><a href="">About</a></li>
-          <li class="nav-link"><a href="">Projects</a></li>
+          <li class="nav-link"><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
       <div class="contact-information">
