--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
       </nav>
     </header>
     <main>
+      <h1>Projects</h1>
       <section class="card-section">
         <h2>Checkout My Art</h2>
         <div class="card-container">
