--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leanna Szypowski - Portfolio</title>
+
+    <script src="https://kit.fontawesome.com/2432c97188.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheets/general-styling.css" />
     <link rel="stylesheet" href="stylesheets/home-styling.css" />
   </head>
@@ -25,6 +27,29 @@
         <p>
           I am a grade 11 student enrolled in Pembina Trails Early College (PTEC). I am currently in the software development course at MITT
         </p>
+      </section>
+      <section class="skills">
+        <div class="skill">
+          <i class="fa-solid fa-code"></i>
+          <div>
+            <h3>Web Development</h3>
+            <p>HTML, CSS, and JavaScript</p>
+          </div>
+        </div>
+        <div class="skill">
+          <i class="fa-sharp fa-solid fa-pen-nib"></i>
+          <div>
+            <h3>Digital Art</h3>
+            <p>Procreate and Photoshop</p>
+          </div>
+        </div>
+        <div class="skill">
+          <i class="fa-solid fa-brush"></i>
+          <div>
+            <h3>Digital Design</h3>
+            <p>Design Principles and Color Theory</p>
+          </div>
+        </div>
       </section>
     </main>
 
