Add carousel to cards

--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Leanna Szypowski - Projects</title>
+    <script src="https://kit.fontawesome.com/2432c97188.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheets/general-styling.css" />
     <link rel="stylesheet" href="stylesheets/projects-styling.css" />
   </head>
@@ -28,6 +29,10 @@
           <div class="card"><img src="images/IMG_1113.PNG" alt="" /></div>
           <div class="card"><img src="images/IMG_1114.PNG" alt="" /></div>
         </div>
+        <div class="card-buttons">
+          <button id="get-previous-card"><i class="fa-solid fa-arrow-left"></i></button>
+          <button id="get-next-card"><i class="fa-solid fa-arrow-right"></i></button>
+        </div>
       </section>
     </main>
 
@@ -47,6 +52,6 @@
       </div>
     </footer>
 
-    <script src="app.js"></script>
+    <script src="scripts/app.js"></script>
   </body>
 </html>
