--- a/projects.html
+++ b/projects.html
@@ -24,10 +24,10 @@
       <section class="card-section">
         <h2>Checkout My Art</h2>
         <div class="card-container">
-          <div class="card"><img src="images/IMG_1111.PNG" alt="" /></div>
-          <div class="card"><img src="images/IMG_1112.PNG" alt="" /></div>
-          <div class="card"><img src="images/IMG_1113.PNG" alt="" /></div>
-          <div class="card"><img src="images/IMG_1114.PNG" alt="" /></div>
+          <div class="card"><img src="images/IMG_1111.jpg" alt="" /></div>
+          <div class="card"><img src="images/IMG_1112.jpg" alt="" /></div>
+          <div class="card"><img src="images/IMG_1113.jpg" alt="" /></div>
+          <div class="card"><img src="images/IMG_1114.jpg" alt="" /></div>
         </div>
         <div class="card-buttons">
           <button id="get-previous-card"><i class="fa-solid fa-arrow-left"></i></button>
