Add card click effect

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
     <main>
       <h1>Projects</h1>
       <section class="card-section">
-        <h2>Checkout My Art</h2>
+        <h2>Check Out My Art</h2>
         <div class="card-container">
           <div class="card"><img src="images/IMG_1111.jpg" alt="" /></div>
           <div class="card"><img src="images/IMG_1112.jpg" alt="" /></div>
@@ -37,6 +37,12 @@
     </main>
 
     <footer>
+      <div class="contact-information">
+        <h4>Contact Information</h4>
+        <p>leannaszypowski@gmail.com</p>
+        <p>(431)-337-3339</p>
+        <p>https://github.com/Leanna-S</p>
+      </div>
       <nav>
         <ul>
           <li class="nav-link"><a href="index.html">Home</a></li>
@@ -44,12 +50,6 @@
           <li class="nav-link"><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
-      <div class="contact-information">
-        <h4>Contact Information</h4>
-        <p>leannaszypowski@gmail.com</p>
-        <p>(431)-337-3339</p>
-        <p>https://github.com/Leanna-S</p>
-      </div>
     </footer>
 
     <script src="scripts/app.js"></script>
