--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     <script src="https://kit.fontawesome.com/2432c97188.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheets/general-styling.css" />
     <link rel="stylesheet" href="stylesheets/home-styling.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap"
+      rel="stylesheet" />
   </head>
   <body>
     <header>
       <nav>
         <ul>
-          <li class="nav-link"><a href="index.html">Home</a></li>
+          <li class="nav-link selected"><a href="index.html">Home</a></li>
           <li class="nav-link"><a href="">About</a></li>
           <li class="nav-link"><a href="projects.html">Projects</a></li>
         </ul>
@@ -23,28 +28,31 @@
 
     <main>
       <section class="introduction-information">
-        <h1>Hi, I'm Leanna Szypowski</h1>
-        <p>
-          I am a grade 11 student enrolled in Pembina Trails Early College (PTEC). I am currently in the software development course at MITT
-        </p>
+        <div>
+          <h1>Hi, I'm <span class="blue">Leanna Szypowski</span></h1>
+          <p>
+            I am a grade 11 student enrolled in Pembina Trails Early College (PTEC). I am currently in the software development course at
+            MITT
+          </p>
+        </div>
       </section>
       <section class="skills">
         <div class="skill">
-          <i class="fa-solid fa-code"></i>
+          <i class="fa-solid fa-code blue"></i>
           <div>
             <h3>Web Development</h3>
             <p>HTML, CSS, and JavaScript</p>
           </div>
         </div>
         <div class="skill">
-          <i class="fa-sharp fa-solid fa-pen-nib"></i>
+          <i class="fa-sharp fa-solid fa-pen-nib blue"></i>
           <div>
             <h3>Digital Art</h3>
             <p>Procreate and Photoshop</p>
           </div>
         </div>
         <div class="skill">
-          <i class="fa-solid fa-brush"></i>
+          <i class="fa-solid fa-brush blue"></i>
           <div>
             <h3>Digital Design</h3>
             <p>Design Principles and Color Theory</p>
@@ -56,13 +64,15 @@
     <footer>
       <div class="contact-information">
         <h4>Contact Information</h4>
-        <p>leannaszypowski@gmail.com</p>
-        <p>(431)-337-3339</p>
-        <p>https://github.com/Leanna-S</p>
+        <div>
+          <p>leannaszypowski@gmail.com</p>
+          <p>(431)-337-3339</p>
+          <p>https://github.com/Leanna-S</p>
+        </div>
       </div>
       <nav>
         <ul>
-          <li class="nav-link"><a href="index.html">Home</a></li>
+          <li class="nav-link selected"><a href="index.html">Home</a></li>
           <li class="nav-link"><a href="">About</a></li>
           <li class="nav-link"><a href="projects.html">Projects</a></li>
         </ul>
