Add sweeping animation

--- a/projects.html
+++ b/projects.html
@@ -18,9 +18,18 @@
     <header>
       <nav>
         <ul>
-          <li class="nav-link"><a href="index.html">Home</a></li>
-          <li class="nav-link"><a href="">About</a></li>
-          <li class="nav-link selected"><a href="projects.html">Projects</a></li>
+          <li class="nav-link">
+            <div class="sweep-cover"></div>
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-link">
+            <div class="sweep-cover"></div>
+            <a href="">About</a>
+          </li>
+          <li class="nav-link selected">
+            <div class="sweep-cover"></div>
+            <a href="projects.html">Projects</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -41,6 +50,7 @@
       </section>
       <section class="project-links">
         <div class="project-link">
+          <div class="sweep-cover"></div>
           <a href="https://github.com/Leanna-S">
             <i class="fa-brands fa-github blue"></i>
             <div>
@@ -63,9 +73,18 @@
       </div>
       <nav>
         <ul>
-          <li class="nav-link"><a href="index.html">Home</a></li>
-          <li class="nav-link"><a href="">About</a></li>
-          <li class="nav-link selected"><a href="projects.html">Projects</a></li>
+          <li class="nav-link">
+            <div class="sweep-cover"></div>
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-link">
+            <div class="sweep-cover"></div>
+            <a href="">About</a>
+          </li>
+          <li class="nav-link selected">
+            <div class="sweep-cover"></div>
+            <a href="projects.html">Projects</a>
+          </li>
         </ul>
       </nav>
     </footer>
