Revert "Add sweeping animation"
This reverts commit 2a594ef72db334d231e429434737db15bbe47e87.

--- a/index.html
+++ b/index.html
@@ -19,18 +19,9 @@
     <header>
       <nav>
         <ul>
-          <li class="nav-link selected">
-            <div class="sweep-cover"></div>
-            <a href="index.html">Home</a>
-          </li>
-          <li class="nav-link">
-            <div class="sweep-cover"></div>
-            <a href="">About</a>
-          </li>
-          <li class="nav-link">
-            <div class="sweep-cover"></div>
-            <a href="projects.html">Projects</a>
-          </li>
+          <li class="nav-link selected"><a href="index.html">Home</a></li>
+          <li class="nav-link"><a href="">About</a></li>
+          <li class="nav-link"><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
     </header>
@@ -38,7 +29,6 @@
     <main>
       <section class="introduction-information">
         <div>
-          <div class="sweep-cover"></div>
           <h1>Hi, I'm <span class="blue">Leanna Szypowski</span></h1>
           <p>
             I am a grade 11 student enrolled in Pembina Trails Early College (PTEC). I am currently in the software development course at
@@ -82,18 +72,9 @@
       </div>
       <nav>
         <ul>
-          <li class="nav-link selected">
-            <div class="sweep-cover"></div>
-            <a href="index.html">Home</a>
-          </li>
-          <li class="nav-link">
-            <div class="sweep-cover"></div>
-            <a href="">About</a>
-          </li>
-          <li class="nav-link">
-            <div class="sweep-cover"></div>
-            <a href="projects.html">Projects</a>
-          </li>
+          <li class="nav-link selected"><a href="index.html">Home</a></li>
+          <li class="nav-link"><a href="">About</a></li>
+          <li class="nav-link"><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
     </footer>
