Add basic styling and layout to About page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav>
         <ul>
           <li class="nav-link selected"><a href="index.html">Home</a></li>
-          <li class="nav-link"><a href="">About</a></li>
+          <li class="nav-link"><a href="about.html">About</a></li>
           <li class="nav-link"><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
@@ -73,7 +73,7 @@
       <nav>
         <ul>
           <li class="nav-link selected"><a href="index.html">Home</a></li>
-          <li class="nav-link"><a href="">About</a></li>
+          <li class="nav-link"><a href="about.html">About</a></li>
           <li class="nav-link"><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
