--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
       <nav>
         <ul>
           <li class="nav-link"><a href="index.html">Home</a></li>
-          <li class="nav-link"><a href="">About</a></li>
+          <li class="nav-link"><a href="about.html">About</a></li>
           <li class="nav-link selected"><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
@@ -64,7 +64,7 @@
       <nav>
         <ul>
           <li class="nav-link"><a href="index.html">Home</a></li>
-          <li class="nav-link"><a href="">About</a></li>
+          <li class="nav-link"><a href="about.html">About</a></li>
           <li class="nav-link selected"><a href="projects.html">Projects</a></li>
         </ul>
       </nav>
