Finish about page styling

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>Leanna Szypowski - About</title>
     <script src="https://kit.fontawesome.com/2432c97188.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheets/general-styling.css" />
+    <link rel="stylesheet" href="stylesheets/about-styling.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -23,6 +24,45 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <h1 class="blue">Projects</h1>
+      <div class="container">
+        <section class="about-container">
+          <img src="images\20220904_130518.jpg" alt="" />
+          <div>
+            <h2>Meet Leanna</h2>
+            <p>
+              Leanna Szypowski is a grade 11 student, currently attending MITT. She is taking the Software Developer course and is excited
+              to learn more. She loves creating websites, from designing them to creating the code behind it all. While her skills are
+              fairly new, Leanna wants to learn more about development.
+            </p>
+            <p>
+              Leanna has a huge passion for reading, writing, programming, and drawing. She spends most of her type trying to learn new
+              things. She greatly enjoys math and english, finding both the problem solving and creativity of each to be freeing. Even more
+              so, she find that programming is both logical and creative, making it one of her favourite thing to do.
+            </p>
+          </div>
+        </section>
+        <section class="skill-bar-container">
+          <div class="skill-bar">
+            <h3>HTML & CSS</h3>
+            <div class="skill-bar-color"></div>
+          </div>
+          <div class="skill-bar">
+            <h3>JavaScript</h3>
+            <div class="skill-bar-color"></div>
+          </div>
+          <div class="skill-bar">
+            <h3>Digital Design</h3>
+            <div class="skill-bar-color"></div>
+          </div>
+          <div class="skill-bar">
+            <h3>Digital Art</h3>
+            <div class="skill-bar-color"></div>
+          </div>
+        </section>
+      </div>
+    </main>
     <footer>
       <div class="contact-information">
         <h4>Contact Information</h4>
