--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <li class="nav-link selected"><a href="index.html">Home</a></li>
           <li class="nav-link"><a href="about.html">About</a></li>
           <li class="nav-link"><a href="projects.html">Projects</a></li>
+          <li class="nav-link"><a href="skills.html">Skills</a></li>
         </ul>
       </nav>
     </header>
@@ -75,6 +76,7 @@
           <li class="nav-link selected"><a href="index.html">Home</a></li>
           <li class="nav-link"><a href="about.html">About</a></li>
           <li class="nav-link"><a href="projects.html">Projects</a></li>
+          <li class="nav-link"><a href="skills.html">Skills</a></li>
         </ul>
       </nav>
     </footer>
