--- a/projects.html
+++ b/projects.html
@@ -21,6 +21,7 @@
           <li class="nav-link"><a href="index.html">Home</a></li>
           <li class="nav-link"><a href="about.html">About</a></li>
           <li class="nav-link selected"><a href="projects.html">Projects</a></li>
+          <li class="nav-link"><a href="skills.html">Skills</a></li>
         </ul>
       </nav>
     </header>
@@ -66,6 +67,7 @@
           <li class="nav-link"><a href="index.html">Home</a></li>
           <li class="nav-link"><a href="about.html">About</a></li>
           <li class="nav-link selected"><a href="projects.html">Projects</a></li>
+          <li class="nav-link"><a href="skills.html">Skills</a></li>
         </ul>
       </nav>
     </footer>
