Finish Skills page

--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
       <h1 class="blue">Projects</h1>
       <section class="card-section">
         <h2>Check Out My Art</h2>
-        <div class="card-container">
+        <div class="card-container" tabindex="0">
           <div class="card"><img src="images/IMG_1111.jpg" alt="" /></div>
           <div class="card"><img src="images/IMG_1112.jpg" alt="" /></div>
           <div class="card"><img src="images/IMG_1113.jpg" alt="" /></div>
