--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
     <main>
-      <h1 class="blue">Projects</h1>
+      <h1 class="blue">About</h1>
       <div class="container">
         <section class="about-container">
           <img src="images\20220904_130518.jpg" alt="" />
