--- a/skills.html
+++ b/skills.html
@@ -7,6 +7,7 @@
     <title>Leanna Szypowski - Skills</title>
     <script src="https://kit.fontawesome.com/2432c97188.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheets/general-styling.css" />
+    <link rel="stylesheet" href="stylesheets/skills-styling.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,7 +25,72 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <h1 class="blue">Skills</h1>
+      <div class="skills">
+        <section>
+          <h2>Experience</h2>
+          <h3>Musixmatch</h3>
+          <h4>Curator/Community Leader</h4>
+          <ul>
+            <li>
+              <span class="blue">Transcribed</span> and <span class="blue">synced</span> song lyrics for
+              <span class="blue">over 175 songs</span>.
+            </li>
+            <li>Resolved user issues and provided <span class="blue">technical support</span>.</li>
+            <li>Cultivated a <span class="blue">supportive communal atmosphere</span>.</li>
+          </ul>
+          <h3>Phoenix Crane</h3>
+          <h4>Technological & Secretarial Duties</h4>
+          <ul>
+            <li>
+              Digitized documents and increased overall <span class="blue">efficiency</span> and <span class="blue">organization</span>.
+            </li>
+            <li>Provided <span class="blue">tech support</span> and resolved common issues.</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Skills</h2>
+          <ul>
+            <li>
+              Fluent in <span class="blue">HTML</span>, <span class="blue">CSS</span>, <span class="blue">JavaScript</span>, and
+              <span class="blue">Python</span>.
+            </li>
+            <li>Created function and well-built web applications.</li>
+            <li>Managed projects using <span class="blue">Git</span> and <span class="blue">GitHub</span>.</li>
+            <li>Used <span class="blue">Bash</span> to streamline workflow.</li>
+            <li>Proficient at <span class="blue">debugging</span> and <span class="blue">troubleshooting</span> code.</li>
+            <li>Applied knowledge of <span class="blue">programming practices</span> and <span class="blue">industry standards</span></li>
+          </ul>
+        </section>
+        <section>
+          <h2>Education</h2>
+          <h3>Pembina Trails Early College - MITT</h3>
+          <h4>Software Development</h4>
+          <ul>
+            <li>Studying <span class="blue">front-end web development</span>.</li>
+            <li>Attending <span class="blue">MITT</span> while in <span class="blue">high school</span>.</li>
+            <li><span class="blue">Accelerated learning</span> with a heavy workload.</li>
+          </ul>
+          <h3>Shaftsbury High School</h3>
+          <h4>Grade 11</h4>
+          <ul>
+            <li><span class="blue">Honor roll with distinction</span> (2018-2023)</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Certificates & Awards</h2>
+          <ul>
+            <li>MITT-SD-160 Technical Writing Skills (<span class="blue">2023</span>)</li>
+            <li>CISCO IT Essentials 20S (<span class="blue">2022</span>)</li>
+            <li>CISCO Cybersecurity Essentials 20S (<span class="blue">2022</span>)</li>
+            <li>LIFT Ethics in the Workplace Certificate (<span class="blue">2021</span>)</li>
+            <li>Beaver Computing Contest - First Place In School (<span class="blue">2021</span>)</li>
+            <li>Beaver Computing Contest - Top 25% (<span class="blue">2019</span>)</li>
+          </ul>
+        </section>
+      </div>
+    </main>
     <footer>
       <div class="contact-information">
         <h4>Contact Information</h4>
