Clean up styling and projects page

--- a/projects.html
+++ b/projects.html
@@ -27,30 +27,50 @@
     </header>
     <main>
       <h1 class="blue">Projects</h1>
-      <section class="card-section">
-        <h2>Check Out My Art</h2>
-        <div class="card-container" tabindex="0">
-          <div class="card"><img src="images/IMG_1111.jpg" alt="" /></div>
-          <div class="card"><img src="images/IMG_1112.jpg" alt="" /></div>
-          <div class="card"><img src="images/IMG_1113.jpg" alt="" /></div>
-          <div class="card"><img src="images/IMG_1114.jpg" alt="" /></div>
-        </div>
-        <div class="card-buttons">
-          <button id="get-previous-card"><i class="fa-solid fa-arrow-left"></i></button>
-          <button id="get-next-card"><i class="fa-solid fa-arrow-right"></i></button>
-        </div>
-      </section>
-      <section class="project-links">
-        <div class="project-link">
-          <a href="https://github.com/Leanna-S">
-            <i class="fa-brands fa-github blue"></i>
-            <div>
-              <h3>Github</h3>
-              <p>Check Out My Coding Projects On Github</p>
-            </div>
-          </a>
-        </div>
-      </section>
+      <div class="content">
+        <section class="card-section">
+          <h2>Check Out My Art</h2>
+          <div class="card-container" tabindex="0">
+            <div class="card"><img src="images/IMG_1111.jpg" alt="" /></div>
+            <div class="card"><img src="images/IMG_1112.jpg" alt="" /></div>
+            <div class="card"><img src="images/IMG_1113.jpg" alt="" /></div>
+            <div class="card"><img src="images/IMG_1114.jpg" alt="" /></div>
+          </div>
+          <div class="card-buttons">
+            <button id="get-previous-card"><i class="fa-solid fa-arrow-left"></i></button>
+            <button id="get-next-card"><i class="fa-solid fa-arrow-right"></i></button>
+          </div>
+        </section>
+        <section class="project-links">
+          <div class="project-link">
+            <a href="https://github.com/Leanna-S">
+              <i class="fa-brands fa-github blue"></i>
+              <div>
+                <h3>Github</h3>
+                <p>Check Out My Coding Projects On Github</p>
+              </div>
+            </a>
+          </div>
+          <div class="project-link">
+            <a href="https://github.com/Leanna-S/SD110-Final-Project">
+              <i class="fa-brands fa-github blue"></i>
+              <div>
+                <h3>Card Match Game</h3>
+                <p>Final Project in my SD-110 JavaScript Basics course at MITT.</p>
+              </div>
+            </a>
+          </div>
+          <div class="project-link">
+            <a href="https://github.com/Leanna-S/SD105-Portfolio-Project">
+              <i class="fa-brands fa-github blue"></i>
+              <div>
+                <h3>Personal Portfolio</h3>
+                <p>Check out the source code for this very website!</p>
+              </div>
+            </a>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer>
