Add scroll animation

--- a/projects.html
+++ b/projects.html
@@ -93,5 +93,6 @@
     </footer>
 
     <script src="scripts/cardEffect.js"></script>
+    <script src="scripts/scrollObserver.js"></script>
   </body>
 </html>
