Fix scroll animation bugs

--- a/skills.html
+++ b/skills.html
@@ -28,7 +28,7 @@
     <main>
       <h1 class="blue">Skills</h1>
       <div class="skills">
-        <section>
+        <section class="inactive">
           <h2>Experience</h2>
           <h3>Musixmatch</h3>
           <h4>Curator/Community Leader</h4>
@@ -49,7 +49,7 @@
             <li>Provided <span class="blue">tech support</span> and resolved common issues.</li>
           </ul>
         </section>
-        <section>
+        <section class="inactive">
           <h2>Skills</h2>
           <ul>
             <li>
@@ -63,7 +63,7 @@
             <li>Applied knowledge of <span class="blue">programming practices</span> and <span class="blue">industry standards</span></li>
           </ul>
         </section>
-        <section>
+        <section class="inactive">
           <h2>Education</h2>
           <h3>Pembina Trails Early College - MITT</h3>
           <h4>Software Development</h4>
@@ -78,7 +78,7 @@
             <li><span class="blue">Honor roll with distinction</span> (2018-2023)</li>
           </ul>
         </section>
-        <section>
+        <section class="inactive">
           <h2>Certificates & Awards</h2>
           <ul>
             <li>MITT-SD-160 Technical Writing Skills (<span class="blue">2023</span>)</li>
