--- a/about.html
+++ b/about.html
@@ -29,15 +29,15 @@
       <h1 class="blue">About</h1>
       <div class="container">
         <section class="about-container">
-          <img src="images\20220904_130518.jpg" alt="" />
+          <img class="inactive" src="images\20220904_130518.jpg" alt="" />
           <div>
-            <h2>Meet Leanna</h2>
-            <p>
+            <h2 class="inactive">Meet Leanna</h2>
+            <p class="inactive">
               Leanna Szypowski is a grade 11 student, currently attending MITT. She is taking the Software Developer course and is excited
               to learn more. She loves creating websites, from designing them to creating the code behind it all. While her skills are
               fairly new, Leanna wants to learn more about development.
             </p>
-            <p>
+            <p class="inactive">
               Leanna has a huge passion for reading, writing, programming, and drawing. She spends most of her type trying to learn new
               things. She greatly enjoys math and english, finding both the problem solving and creativity of each to be freeing. Even more
               so, she find that programming is both logical and creative, making it one of her favourite thing to do.
@@ -45,19 +45,19 @@
           </div>
         </section>
         <section class="skill-bar-container">
-          <div class="skill-bar">
+          <div class="skill-bar inactive">
             <h3>HTML & CSS</h3>
             <div class="skill-bar-color"></div>
           </div>
-          <div class="skill-bar">
+          <div class="skill-bar inactive">
             <h3>JavaScript</h3>
             <div class="skill-bar-color"></div>
           </div>
-          <div class="skill-bar">
+          <div class="skill-bar inactive">
             <h3>Digital Design</h3>
             <div class="skill-bar-color"></div>
           </div>
-          <div class="skill-bar">
+          <div class="skill-bar inactive">
             <h3>Digital Art</h3>
             <div class="skill-bar-color"></div>
           </div>
