--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main>
       <section class="introduction-information">
-        <div>
+        <div class="inactive">
           <h1>Hi, I'm <span class="blue">Leanna Szypowski</span></h1>
           <p>
             I am a grade 11 student enrolled in Pembina Trails Early College (PTEC). I am currently in the software development course at
@@ -38,21 +38,21 @@
         </div>
       </section>
       <section class="skills">
-        <div class="skill">
+        <div class="skill inactive">
           <i class="fa-solid fa-code blue"></i>
           <div>
             <h3>Web Development</h3>
             <p>HTML, CSS, and JavaScript</p>
           </div>
         </div>
-        <div class="skill">
+        <div class="skill inactive">
           <i class="fa-sharp fa-solid fa-pen-nib blue"></i>
           <div>
             <h3>Digital Art</h3>
             <p>Procreate and Photoshop</p>
           </div>
         </div>
-        <div class="skill">
+        <div class="skill inactive">
           <i class="fa-solid fa-brush blue"></i>
           <div>
             <h3>Digital Design</h3>
