--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
     <main>
       <h1 class="blue">Projects</h1>
       <div class="content">
-        <section class="card-section">
+        <section class="card-section inactive">
           <h2>Check Out My Art</h2>
           <div class="card-container" tabindex="0">
             <div class="card"><img src="images/IMG_1111.jpg" alt="" /></div>
@@ -42,7 +42,7 @@
           </div>
         </section>
         <section class="project-links">
-          <div class="project-link">
+          <div class="project-link inactive">
             <a href="https://github.com/Leanna-S">
               <i class="fa-brands fa-github blue"></i>
               <div>
@@ -51,7 +51,7 @@
               </div>
             </a>
           </div>
-          <div class="project-link">
+          <div class="project-link inactive">
             <a href="https://github.com/Leanna-S/SD110-Final-Project">
               <i class="fa-brands fa-github blue"></i>
               <div>
@@ -60,7 +60,7 @@
               </div>
             </a>
           </div>
-          <div class="project-link">
+          <div class="project-link inactive">
             <a href="https://github.com/Leanna-S/SD105-Portfolio-Project">
               <i class="fa-brands fa-github blue"></i>
               <div>
