Combine all stylesheets

--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
     <title>Leanna Szypowski - About</title>
     <script src="https://kit.fontawesome.com/2432c97188.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheets/general-styling.css" />
-    <link rel="stylesheet" href="stylesheets/about-styling.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,8 +26,8 @@
     </header>
     <main>
       <h1 class="blue">About</h1>
-      <div class="container">
-        <section class="about-container">
+      <div class="about-container">
+        <section class="about-me">
           <img class="inactive" src="images\20220904_130518.jpg" alt="" />
           <div>
             <h2 class="inactive">Meet Leanna</h2>
