--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
     <script src="https://kit.fontawesome.com/2432c97188.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheets/general-styling.css" />
-    <link rel="stylesheet" href="stylesheets/home-styling.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -28,38 +27,40 @@
     </header>
 
     <main>
-      <section class="introduction-information">
-        <div class="inactive">
-          <h1>Hi, I'm <span class="blue">Leanna Szypowski</span></h1>
-          <p>
-            I am a grade 11 student enrolled in Pembina Trails Early College (PTEC). I am currently in the software development course at
-            MITT
-          </p>
-        </div>
-      </section>
-      <section class="skills">
-        <div class="skill inactive">
-          <i class="fa-solid fa-code blue"></i>
-          <div>
-            <h3>Web Development</h3>
-            <p>HTML, CSS, and JavaScript</p>
+      <div class="home-container">
+        <section class="introduction-information">
+          <div class="inactive">
+            <h1>Hi, I'm <span class="blue">Leanna Szypowski</span></h1>
+            <p>
+              I am a grade 11 student enrolled in Pembina Trails Early College (PTEC). I am currently in the software development course at
+              MITT
+            </p>
           </div>
-        </div>
-        <div class="skill inactive">
-          <i class="fa-sharp fa-solid fa-pen-nib blue"></i>
-          <div>
-            <h3>Digital Art</h3>
-            <p>Procreate and Photoshop</p>
+        </section>
+        <section class="abilities">
+          <div class="ability inactive">
+            <i class="fa-solid fa-code blue"></i>
+            <div>
+              <h3>Web Development</h3>
+              <p>HTML, CSS, and JavaScript</p>
+            </div>
           </div>
-        </div>
-        <div class="skill inactive">
-          <i class="fa-solid fa-brush blue"></i>
-          <div>
-            <h3>Digital Design</h3>
-            <p>Design Principles and Color Theory</p>
+          <div class="ability inactive">
+            <i class="fa-sharp fa-solid fa-pen-nib blue"></i>
+            <div>
+              <h3>Digital Art</h3>
+              <p>Procreate and Photoshop</p>
+            </div>
           </div>
-        </div>
-      </section>
+          <div class="ability inactive">
+            <i class="fa-solid fa-brush blue"></i>
+            <div>
+              <h3>Digital Design</h3>
+              <p>Design Principles and Color Theory</p>
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer>
