--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,6 @@
     <title>Leanna Szypowski - Projects</title>
     <script src="https://kit.fontawesome.com/2432c97188.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="stylesheets/general-styling.css" />
-    <link rel="stylesheet" href="stylesheets/projects-styling.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -31,10 +30,10 @@
         <section class="card-section inactive">
           <h2>Check Out My Art</h2>
           <div class="card-container" tabindex="0">
-            <div class="card"><img src="images/IMG_1111.jpg" alt="" /></div>
-            <div class="card"><img src="images/IMG_1112.jpg" alt="" /></div>
-            <div class="card"><img src="images/IMG_1113.jpg" alt="" /></div>
-            <div class="card"><img src="images/IMG_1114.jpg" alt="" /></div>
+            <div class="card" tabindex="0"><img src="images/IMG_1111.jpg" alt="" /></div>
+            <div class="card" tabindex="0"><img src="images/IMG_1112.jpg" alt="" /></div>
+            <div class="card" tabindex="0"><img src="images/IMG_1113.jpg" alt="" /></div>
+            <div class="card" tabindex="0"><img src="images/IMG_1114.jpg" alt="" /></div>
           </div>
           <div class="card-buttons">
             <button id="get-previous-card"><i class="fa-solid fa-arrow-left"></i></button>
