Add theme changer

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       </nav>
     </header>
     <main>
-      <h1 class="blue">About</h1>
+      <h1 class="colored">About</h1>
       <div class="about-container">
         <section class="about-me">
           <img class="inactive" src="images\20220904_130518.jpg" alt="" />
@@ -72,6 +72,16 @@
           <p>https://github.com/Leanna-S</p>
         </div>
       </div>
+      <div class="color-changer">
+        <h3>Theme Color</h3>
+        <ul>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+        </ul>
+      </div>
       <nav>
         <ul>
           <li class="nav-link"><a href="index.html">Home</a></li>
@@ -82,5 +92,6 @@
       </nav>
     </footer>
     <script src="scripts/scrollObserver.js"></script>
+    <script src="scripts/colorPicker.js"></script>
   </body>
 </html>
