--- a/skills.html
+++ b/skills.html
@@ -25,7 +25,7 @@
       </nav>
     </header>
     <main>
-      <h1 class="blue">Skills</h1>
+      <h1 class="colored">Skills</h1>
       <div class="skills">
         <section class="inactive">
           <h2>Experience</h2>
@@ -33,33 +33,36 @@
           <h4>Curator/Community Leader</h4>
           <ul>
             <li>
-              <span class="blue">Transcribed</span> and <span class="blue">synced</span> song lyrics for
-              <span class="blue">over 175 songs</span>.
+              <span class="colored">Transcribed</span> and <span class="colored">synced</span> song lyrics for
+              <span class="colored">over 175 songs</span>.
             </li>
-            <li>Resolved user issues and provided <span class="blue">technical support</span>.</li>
-            <li>Cultivated a <span class="blue">supportive communal atmosphere</span>.</li>
+            <li>Resolved user issues and provided <span class="colored">technical support</span>.</li>
+            <li>Cultivated a <span class="colored">supportive communal atmosphere</span>.</li>
           </ul>
           <h3>Phoenix Crane</h3>
           <h4>Technological & Secretarial Duties</h4>
           <ul>
             <li>
-              Digitized documents and increased overall <span class="blue">efficiency</span> and <span class="blue">organization</span>.
+              Digitized documents and increased overall <span class="colored">efficiency</span> and
+              <span class="colored">organization</span>.
             </li>
-            <li>Provided <span class="blue">tech support</span> and resolved common issues.</li>
+            <li>Provided <span class="colored">tech support</span> and resolved common issues.</li>
           </ul>
         </section>
         <section class="inactive">
           <h2>Skills</h2>
           <ul>
             <li>
-              Fluent in <span class="blue">HTML</span>, <span class="blue">CSS</span>, <span class="blue">JavaScript</span>, and
-              <span class="blue">Python</span>.
+              Fluent in <span class="colored">HTML</span>, <span class="colored">CSS</span>, <span class="colored">JavaScript</span>, and
+              <span class="colored">Python</span>.
             </li>
             <li>Created function and well-built web applications.</li>
-            <li>Managed projects using <span class="blue">Git</span> and <span class="blue">GitHub</span>.</li>
-            <li>Used <span class="blue">Bash</span> to streamline workflow.</li>
-            <li>Proficient at <span class="blue">debugging</span> and <span class="blue">troubleshooting</span> code.</li>
-            <li>Applied knowledge of <span class="blue">programming practices</span> and <span class="blue">industry standards</span></li>
+            <li>Managed projects using <span class="colored">Git</span> and <span class="colored">GitHub</span>.</li>
+            <li>Used <span class="colored">Bash</span> to streamline workflow.</li>
+            <li>Proficient at <span class="colored">debugging</span> and <span class="colored">troubleshooting</span> code.</li>
+            <li>
+              Applied knowledge of <span class="colored">programming practices</span> and <span class="colored">industry standards</span>
+            </li>
           </ul>
         </section>
         <section class="inactive">
@@ -67,25 +70,25 @@
           <h3>Pembina Trails Early College - MITT</h3>
           <h4>Software Development</h4>
           <ul>
-            <li>Studying <span class="blue">front-end web development</span>.</li>
-            <li>Attending <span class="blue">MITT</span> while in <span class="blue">high school</span>.</li>
-            <li><span class="blue">Accelerated learning</span> with a heavy workload.</li>
+            <li>Studying <span class="colored">front-end web development</span>.</li>
+            <li>Attending <span class="colored">MITT</span> while in <span class="colored">high school</span>.</li>
+            <li><span class="colored">Accelerated learning</span> with a heavy workload.</li>
           </ul>
           <h3>Shaftsbury High School</h3>
           <h4>Grade 11</h4>
           <ul>
-            <li><span class="blue">Honor roll with distinction</span> (2018-2023)</li>
+            <li><span class="colored">Honor roll with distinction</span> (2018-2023)</li>
           </ul>
         </section>
         <section class="inactive">
           <h2>Certificates & Awards</h2>
           <ul>
-            <li>MITT-SD-160 Technical Writing Skills (<span class="blue">2023</span>)</li>
-            <li>CISCO IT Essentials 20S (<span class="blue">2022</span>)</li>
-            <li>CISCO Cybersecurity Essentials 20S (<span class="blue">2022</span>)</li>
-            <li>LIFT Ethics in the Workplace Certificate (<span class="blue">2021</span>)</li>
-            <li>Beaver Computing Contest - First Place In School (<span class="blue">2021</span>)</li>
-            <li>Beaver Computing Contest - Top 25% (<span class="blue">2019</span>)</li>
+            <li>MITT-SD-160 Technical Writing Skills (<span class="colored">2023</span>)</li>
+            <li>CISCO IT Essentials 20S (<span class="colored">2022</span>)</li>
+            <li>CISCO Cybersecurity Essentials 20S (<span class="colored">2022</span>)</li>
+            <li>LIFT Ethics in the Workplace Certificate (<span class="colored">2021</span>)</li>
+            <li>Beaver Computing Contest - First Place In School (<span class="colored">2021</span>)</li>
+            <li>Beaver Computing Contest - Top 25% (<span class="colored">2019</span>)</li>
           </ul>
         </section>
       </div>
@@ -99,6 +102,16 @@
           <p>https://github.com/Leanna-S</p>
         </div>
       </div>
+      <div class="color-changer">
+        <h3>Theme Color</h3>
+        <ul>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+        </ul>
+      </div>
       <nav>
         <ul>
           <li class="nav-link"><a href="index.html">Home</a></li>
@@ -109,5 +122,6 @@
       </nav>
     </footer>
     <script src="scripts/scrollObserver.js"></script>
+    <script src="scripts/colorPicker.js"></script>
   </body>
 </html>
