--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="home-container">
         <section class="introduction-information">
           <div class="inactive">
-            <h1>Hi, I'm <span class="blue">Leanna Szypowski</span></h1>
+            <h1>Hi, I'm <span class="colored">Leanna Szypowski</span></h1>
             <p>
               I am a grade 11 student enrolled in Pembina Trails Early College (PTEC). I am currently in the software development course at
               MITT
@@ -39,21 +39,21 @@
         </section>
         <section class="abilities">
           <div class="ability inactive">
-            <i class="fa-solid fa-code blue"></i>
+            <i class="fa-solid fa-code colored"></i>
             <div>
               <h3>Web Development</h3>
               <p>HTML, CSS, and JavaScript</p>
             </div>
           </div>
           <div class="ability inactive">
-            <i class="fa-sharp fa-solid fa-pen-nib blue"></i>
+            <i class="fa-sharp fa-solid fa-pen-nib colored"></i>
             <div>
               <h3>Digital Art</h3>
               <p>Procreate and Photoshop</p>
             </div>
           </div>
           <div class="ability inactive">
-            <i class="fa-solid fa-brush blue"></i>
+            <i class="fa-solid fa-brush colored"></i>
             <div>
               <h3>Digital Design</h3>
               <p>Design Principles and Color Theory</p>
@@ -72,6 +72,16 @@
           <p>https://github.com/Leanna-S</p>
         </div>
       </div>
+      <div class="color-changer">
+        <h3>Theme Color</h3>
+        <ul>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+        </ul>
+      </div>
       <nav>
         <ul>
           <li class="nav-link selected"><a href="index.html">Home</a></li>
@@ -82,5 +92,6 @@
       </nav>
     </footer>
     <script src="scripts/scrollObserver.js"></script>
+    <script src="scripts/colorPicker.js"></script>
   </body>
 </html>
