--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,7 @@
       </nav>
     </header>
     <main>
-      <h1 class="blue">Projects</h1>
+      <h1 class="colored">Projects</h1>
       <div class="content">
         <section class="card-section inactive">
           <h2>Check Out My Art</h2>
@@ -43,7 +43,7 @@
         <section class="project-links">
           <div class="project-link inactive">
             <a href="https://github.com/Leanna-S">
-              <i class="fa-brands fa-github blue"></i>
+              <i class="fa-brands fa-github colored"></i>
               <div>
                 <h3>Github</h3>
                 <p>Check Out My Coding Projects On Github</p>
@@ -52,7 +52,7 @@
           </div>
           <div class="project-link inactive">
             <a href="https://github.com/Leanna-S/SD110-Final-Project">
-              <i class="fa-brands fa-github blue"></i>
+              <i class="fa-brands fa-github colored"></i>
               <div>
                 <h3>Card Match Game</h3>
                 <p>Final Project in my SD-110 JavaScript Basics course at MITT.</p>
@@ -61,7 +61,7 @@
           </div>
           <div class="project-link inactive">
             <a href="https://github.com/Leanna-S/SD105-Portfolio-Project">
-              <i class="fa-brands fa-github blue"></i>
+              <i class="fa-brands fa-github colored"></i>
               <div>
                 <h3>Personal Portfolio</h3>
                 <p>Check out the source code for this very website!</p>
@@ -81,6 +81,16 @@
           <p>https://github.com/Leanna-S</p>
         </div>
       </div>
+      <div class="color-changer">
+        <h3>Theme Color</h3>
+        <ul>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+          <li class="color"></li>
+        </ul>
+      </div>
       <nav>
         <ul>
           <li class="nav-link"><a href="index.html">Home</a></li>
@@ -90,8 +100,8 @@
         </ul>
       </nav>
     </footer>
-
     <script src="scripts/cardEffect.js"></script>
     <script src="scripts/scrollObserver.js"></script>
+    <script src="scripts/colorPicker.js"></script>
   </body>
 </html>
