Minor styling changes

--- a/projects.html
+++ b/projects.html
@@ -30,10 +30,10 @@
         <section class="card-section inactive">
           <h2>Check Out My Art</h2>
           <div class="card-container" tabindex="0">
-            <div class="card" tabindex="0"><img src="images/IMG_1111.jpg" alt="" /></div>
-            <div class="card" tabindex="0"><img src="images/IMG_1112.jpg" alt="" /></div>
-            <div class="card" tabindex="0"><img src="images/IMG_1113.jpg" alt="" /></div>
-            <div class="card" tabindex="0"><img src="images/IMG_1114.jpg" alt="" /></div>
+            <div class="card" tabindex="0"><img src="" alt="" /></div>
+            <div class="card" tabindex="0"><img src="" alt="" /></div>
+            <div class="card" tabindex="0"><img src="" alt="" /></div>
+            <div class="card" tabindex="0"><img src="" alt="" /></div>
           </div>
           <div class="card-buttons">
             <button id="get-previous-card"><i class="fa-solid fa-arrow-left"></i></button>
